# llm-debate-arena

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_EN.md  docker-compose.yml  pyproject.toml  start.sh
backend/: README.md  __init__.py  auth.py  config.py  database.py  elo.py  judge.py  llm_client.py  log.py  main.py  migrate_sqlite_to_mysql.py  models.py  requirements.txt  run.sh  tools.py  tournament.py  utils.py
docs/: ASYNC_FIX.md  CONCURRENCY.md  DEPLOYMENT.md  DOCKER.md  MYSQL_MIGRATION.md  TECH_NEW_v4.md  TECH_NEW_v5.md  UPDATE_v4.1.md  UPDATE_v4.2.md  UPDATE_v4.3_PLAN.md  UPDATE_v4.3_SUMMARY.md  UPDATE_v4.4_FINAL.md  nginx.conf
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  config.ts  index.css
frontend/src/components/: DebateViewer.tsx  Toast.tsx
frontend/src/hooks/: useSSE.ts  useToast.ts
frontend/src/pages/: Arena.tsx  Leaderboard.tsx  Login.tsx  MatchHistory.tsx  MatchShare.tsx  Register.tsx
tests/: test_concurrency.py  test_llm_api.py
